# PybindMatlab

./: .gitignore  README.md  ttsse_env.yaml
project/: CMakeLists.txt  setup.py
project/examples/: cg_matlab.m  cg_solve.py
project/src/CGsolver/: eigen_cg.cpp
project/tests/: cg.py  matlab_correctness_test.m  matlab_python_correctness_test.m  matlab_python_correctness_test.py  matlabtest.asv  matlabtest.m  performance.m  python_eigen_correctness_test.py  unit_testing.py
test/: CMakeLists.txt
test/examples/: cg_matlab.asv  cg_matlab.m  cg_solve.py  test.py
test/src/CGsolver/: eigen_cg.cpp
test/src/CGsolver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
